2003-12-08 Jim Garlick <garlick@llnl.gov>

    * etc/vpc.dev: implement status_all, on_all, off_all, and cycle_all
    for efficiency.

    * src/device.c, src/powermand.c, src/wrappers.c: introduce poll debugging
    code and fix bug where poll loop would spin when poll returned errors
    on devices.

    * src/device.c: rewrite dev_post_poll() for clarity.

    * src/device_pipe.c, Makefile: use openpty() from -lutil instead of local
    pty_open.  This gets pty allocation right once and for all.

    * src/pty.[ch]: removed.

    * src/hash.[ch]: new from lsd-tools (courtesy Chris Dunlap)

    * src/device.[ch], src/client.c: changed ArgList to use hash_t instead of
    List since gprof showed list searching was the bottleneck in big configs.
    Caveat: unsorted output (-x, temperature) is no longer returned in config 
    file order. 

    * : tag powerman-1-0-19

2003-12-04 Jim Garlick <garlick@llnl.gov>

    * etc/cyclades-pm8.dev: fixed status script to not fail intermittently
    depending on breakdown of partial reads.

    * etc/cyclades-pm8.dev: device has a non-configurable inactivity
    timeout so log on and off for each command.

    * etc/baytech-rpc28-nc.dev: device has a non-configurable inactivity
    timeout so repeat login sequence before each command (it works whether
    logged in or not).
    
    * powerman.spec: add %dir entries for directories that may be inadvertantly
    created with too restrictive permissions like /usr/man/man7.

2003-12-03 Albert Chu <chu11@llnl.gov>

    * /etc/ipmipower.dev: Removed "timed out" as acceptable message to
    indicate power is off.  Power status should be unknown when there
    is a timeout.
 
2003-12-02 Jim Garlick <garlick@llnl.gov>

    * man/powerman-devices.7: Added.

2003-12-02 Albert Chu <chu11@llnl.gov>

    * etc/ipmipower.dev: Replaced "failed to connect" with "timed out" 
    and "not discovered".

2003-11-30 Jim Garlick <garlick@llnl.gov>
